--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 wandb
+backbone_pretrained_models
 best_model.pth
-**__pycache__
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+**.pyc
