Remove useless files

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ molDistill/notebooks/fig_global_ranking_classif_cluster**
 molDistill/notebooks/Impact of distillation on performances.ipynb
 eval.sh
 train.sh
+preprocess.sh
 molDistill/run_eval_while_training.py
 
 # Byte-compiled / optimized / DLL files
